# djangoplay-cli

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.gitlab/ci/: github-mirror.yml  pypi-release.yml
dplay/: __init__.py  cli.py
dplay/commands/: __init__.py
dplay/commands/dev/: __init__.py  certs.py  down.py  http.py  logs.py  ssl.py  up.py  worker.py
dplay/commands/system/: __init__.py  doctor.py  reset.py
dplay/core/: __init__.py  config_loader.py  process_manager.py  repo_detector.py
dplay/environment/: __init__.py  diagnostics.py  venv_detector.py
dplay/utils/: __init__.py  browser.py  dev_startup.py  env_manager.py  log_manager.py  redis_manager.py  ssl_manager.py  static_manager.py  subprocess_utils.py
